--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,3 +8,42 @@
   text-align: center;
 }
 
+@font-face {
+  font-family: "gopher_black";
+  src: url("./static/fonts/gopher-black-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "gopher_black";
+  src: url("./static/fonts/gopher-black-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "gopher_black";
+  src: url("./static/fonts/gopher-black-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "gopher_black";
+  src: url("./static/fonts/gopher-black-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "gopher_black";
+  src: url("./static/fonts/gopher-black-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "gopher_black";
+  src: url("./static/fonts/gopher-black-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "gopher_black";
+  src: url("./static/fonts/gopher-black-webfont.woff") format("woff");
+}
+
+* {
+  font-family: "gopher_black";
+}
+
